updating override template

--- a/override.env.template
+++ b/override.env.template
@@ -1,2 +1,10 @@
 SERVER_PROFILE_P1MFA_URL=https://github.com/ttranatping/p1mfa-serverprofile.git
 SERVER_PROFILE_P1MFA_PATH=pingfederate
+
+P14C_ENVIRONMENTID=
+P14C_WORKER_CLIENTID=
+P14C_WORKER_CLIENTSECRET=
+P14C_ENDUSER_CLIENTID=
+P14C_ENDUSER_CLIENTSECRET=
+P14C_API_SERVICE=https://api.pingone.com/v1
+P14C_AUTHORIZATION_SERVICE=https://auth.pingone.com
