--- a/override.env.template
+++ b/override.env.template
@@ -1,5 +1,6 @@
 SERVER_PROFILE_P1MFA_URL=https://github.com/ttranatping/p1mfa-serverprofile.git
 SERVER_PROFILE_P1MFA_PATH=pingfederate
+PING_IDENTITY_PASSWORD=2FederateM0re
 
 P14C_ENVIRONMENTID=
 P14C_WORKER_CLIENTID=
