--- a/pingfederate/instance/server/default/conf/language-packs/authn-api-messages.properties
+++ b/pingfederate/instance/server/default/conf/language-packs/authn-api-messages.properties
@@ -1,4 +1,4 @@
-# Build timestamp: 2020-07-28 17:33
+# Build timestamp: 2020-09-11 18:12
 
 # This file specifies the message strings for errors defined in the PingFederate
 # Authentication API SDK.
@@ -35,3 +35,7 @@ authn.api.push.failed=Couldn't send the push notification.
 authn.api.otp.expired=This passcode has expired.
 authn.api.no.response.passive.push=Not authorized.
 authn.api.device.blocked=Your device is blocked.
+authn.api.external.authn.failed.user.cancelled=You have cancelled the sign-on request.
+authn.api.external.authn.failed.auth.code.error=We couldn't sign you on to the external identity provider.
+authn.api.mfa.disabled=MFA is disabled for user.
+authn.api.no.usable.devices=User has no usable devices.
