--- a/override.env.template
+++ b/override.env.template
@@ -1,3 +1,6 @@
+SERVER_PROFILE_URL=https://github.com/pingidentity/pingidentity-server-profiles.git
+SERVER_PROFILE_PATH=getting-started/pingfederate
+SERVER_PROFILE_PARENT=P1MFA
 SERVER_PROFILE_P1MFA_URL=https://github.com/ttranatping/p1mfa-serverprofile.git
 SERVER_PROFILE_P1MFA_PATH=pingfederate
 PING_IDENTITY_PASSWORD=2FederateM0re
