--- a/override.env.template
+++ b/override.env.template
@@ -5,6 +5,8 @@ SERVER_PROFILE_P1MFA_URL=https://github.com/ttranatping/p1mfa-serverprofile.git
 SERVER_PROFILE_P1MFA_PATH=pingfederate
 PING_IDENTITY_PASSWORD=2FederateM0re
 
+PF_BASE_URL=https://localhost:9031
+
 P14C_ENVIRONMENTID=
 P14C_PFCONNECTION_CLIENTID=
 P14C_PFCONNECTION_CLIENTSECRET=
