--- a/pingfederate/instance/server/default/conf/language-packs/pingone-mfa-messages.properties
+++ b/pingfederate/instance/server/default/conf/language-packs/pingone-mfa-messages.properties
@@ -6,6 +6,7 @@
 # pingone.mfa.device.selection.message=<>
 # pingone.mfa.device.selection.cancel.button.title=<>
 # pingone.mfa.device.selection.otp.resend.limit=<>
+# pingone.mfa.device.selection.totp.attempts.limit=<>
 # <device_type>.pingone.mfa.device.selection.method=<>
 # <device_type>.pingone.mfa.device.selection.message=<>
 # <device_type>.pingone.mfa.device.selection.icon=<>
@@ -17,6 +18,8 @@ pingone.mfa.device.selection.message=Select the authentication method you want t
 pingone.mfa.device.selection.cancel.button.title=Cancel
 pingone.mfa.device.selection.generic.error.message=The request could not be completed. There was a problem processing the request.
 pingone.mfa.device.selection.otp.resend.limit=Passcode resend limit reached.
+pingone.mfa.device.selection.totp.attempts.limit=Too many unsuccessful attempts with this passcode. Please try again in a few minutes.
+pingone.mfa.device.selection.incompatible.device=Unsupported authenticator or user refused consent.
 
 # Example (email)
 email.pingone.mfa.device.selection.method=Email
@@ -30,16 +33,37 @@ sms.pingone.mfa.device.selection.icon=sms
 mobile.pingone.mfa.device.selection.method=Mobile
 mobile.pingone.mfa.device.selection.icon=mobile
 
+# Example (totp)
+totp.pingone.mfa.device.selection.method=Authenticator App
+totp.pingone.mfa.device.selection.icon=mobile
+
+# Example (platform)
+platform.pingone.mfa.device.selection.method=Platform
+platform.pingone.mfa.device.selection.icon=platform
+platform.pingone.mfa.assertion.required.method=Biometrics
+
+# Example (security key)
+security_key.pingone.mfa.device.selection.method=Security Key
+security_key.pingone.mfa.device.selection.icon=security_key
+security_key.pingone.mfa.assertion.required.method=Security Key
+
+pingone.mfa.assertion.required.title=Authenticating
+pingone.mfa.assertion.required.header=Authenticating
+pingone.mfa.assertion.required.request.sent.title=Request sent to:
+
 # OTP Required Template
 # pingone.mfa.otp.required.title=<>
 # pingone.mfa.otp.required.sign.on.button.title=<>
 # pingone.mfa.otp.required.cancel.button.title=<>
 # pingone.mfa.otp.required.otp.resend.limit=<>
 # pingone.mfa.otp.required.otp.attempts.limit=<>
+# pingone.mfa.otp.required.totp.attempts.limit=<>
 # <device_type>.pingone.mfa.otp.required.header=<>
 # <device_type>.pingone.mfa.otp.required.message=<>
 # <device_type>.pingone.mfa.otp.required.otp.sent.text=<>
 # <device_type>.pingone.mfa.otp.required.resend.button.title=<>
+# mobile.pingone.mfa.otp.required.message.complete=<>
+# mobile.pingone.mfa.otp.required.message.retry=<>
 
 # Example
 pingone.mfa.otp.required.title=Sign On
@@ -47,6 +71,7 @@ pingone.mfa.otp.required.sign.on.button.title=Sign On
 pingone.mfa.otp.required.cancel.button.title=Cancel
 pingone.mfa.otp.required.otp.resend.limit=Passcode resend limit reached.
 pingone.mfa.otp.required.otp.attempts.limit=Too many unsuccessful attempts with this passcode.
+pingone.mfa.otp.required.totp.attempts.limit=Too many unsuccessful attempts with this passcode. Please try again in a few minutes.
 pingone.mfa.otp.required.invalid.otp=This passcode is invalid or has expired.
 
 # Example (email)
@@ -55,11 +80,20 @@ email.pingone.mfa.otp.required.message=Enter the passcode that you received to c
 email.pingone.mfa.otp.required.otp.sent.text=Email sent to:
 email.pingone.mfa.otp.required.resend.button.title=Resend
 
+# Example (totp)
+totp.pingone.mfa.otp.required.header=Authenticator App
+totp.pingone.mfa.otp.required.message=Enter the passcode displayed in your app to complete authentication.
+
 # Example (SMS)
 sms.pingone.mfa.otp.required.header=SMS Authentication
 sms.pingone.mfa.otp.required.message=Enter the passcode that you received to complete authentication.
 sms.pingone.mfa.otp.required.otp.sent.text=SMS sent to:
 sms.pingone.mfa.otp.required.resend.button.title=Resend
+
+# Example (mobile)
+mobile.pingone.mfa.otp.required.message=Enter the passcode displayed in your app to complete authentication.
+mobile.pingone.mfa.otp.required.push.message=Enter the passcode displayed in your app or
+mobile.pingone.mfa.otp.required.push.message.retry=retry authentication
 
 # Push Confirmation Waiting Template
 # pingone.mfa.push.confirmation.waiting.title=<>
@@ -86,12 +120,20 @@ pingone.mfa.push.confirmation.rejected.cancel.button.title=Cancel
 # pingone.mfa.push.confirmation.timed.out.header=<>
 # pingone.mfa.push.confirmation.timed.out.retry.button.title=<>
 # pingone.mfa.push.confirmation.timed.out.cancel.button.title=<>
+# pingone.mfa.push.confirmation.timed.out.message=<>
+# pingone.mfa.push.confirmation.timed.out.message.retry=<>
+# pingone.mfa.push.confirmation.timed.out.sign.on.button.title=<>
+# pingone.mfa.push.confirmation.timed.out.invalid.otp=<>
 
 # Example
 pingone.mfa.push.confirmation.timed.out.title=Timed Out
 pingone.mfa.push.confirmation.timed.out.header=Timed Out
 pingone.mfa.push.confirmation.timed.out.retry.button.title=Retry
 pingone.mfa.push.confirmation.timed.out.cancel.button.title=Cancel
+pingone.mfa.push.confirmation.timed.out.message=Enter the passcode displayed in your app or
+pingone.mfa.push.confirmation.timed.out.message.retry=retry authentication
+pingone.mfa.push.confirmation.timed.out.sign.on.button.title=Sign On
+pingone.mfa.push.confirmation.timed.out.invalid.otp=This passcode is invalid or has expired.
 
 # MFA Completed Template
 # pingone.mfa.completed.title=<>
@@ -111,10 +153,12 @@ pingone.mfa.completed.header=Authenticated
 # pingone.mfa.failed.push.failed=<>
 # pingone.mfa.failed.no.response.passive.push=<>
 # pingone.mfa.failed.mfa.disabled=<>
+# pingone.mfa.failed.user.not.found=<>
+# pingone.mfa.failed.could.not.authenticate=<>
 
 # Example
-pingone.mfa.failed.title=Error
-pingone.mfa.failed.header=Error
+pingone.mfa.failed.title=Blocked
+pingone.mfa.failed.header=Blocked
 pingone.mfa.failed.cancel.button.title=Cancel
 pingone.mfa.failed.server.error=Server error.
 pingone.mfa.failed.service.unavailable=Service unavailable.
@@ -123,3 +167,5 @@ pingone.mfa.failed.push.failed=Couldn't send the push notification.
 pingone.mfa.failed.no.response.passive.push=Not authorized.
 pingone.mfa.failed.mfa.disabled=MFA is disabled.
 pingone.mfa.failed.no.usable.devices=User has no usable devices.
+pingone.mfa.failed.user.not.found=User unavailable.
+pingone.mfa.failed.could.not.authenticate=You couldn't be authenticated.
